--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "material-ui": "0.20.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-modal": "3.14.4",
     "react-scripts": "4.0.0"
   },
   "devDependencies": {
